k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mainserver-service
spec:
  replicas: 1
  revisionHistoryLimit: 1  # Keep only one old Replica Set as backup
  selector:
    matchLabels:
      app: mainserver
  template:
    metadata:
      labels:
        app: mainserver
    spec:
      containers:
      - name: mainserver
        image: ghcr.io/2024-sdm-group5/mainserver-service:latest
        ports:
        - containerPort: 8080
        resources:
            requests:
              cpu: "200m"
              memory: "200Mi"
            limits:
              cpu: "500m"
              memory: "1000Mi"
      imagePullSecrets:
        - name: github-registry
