k8s/fastapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mainserver-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mainserver
  template:
    metadata:
      labels:
        app: mainserver
    spec:
      containers:
      - name: mainserver
        image: ghcr.io/2024-sdm-group5/mainserver-service:latest
        ports:
        - containerPort: 80
