k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mainserver-service
spec:
  selector:
    app: mainserver
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
